--- a/Ejecutable/templates/ingreso.html
+++ b/Ejecutable/templates/ingreso.html
@@ -11,9 +11,29 @@
       justify-content: center;
       min-height: 100vh;
       background-color: #f4f4f4;
+      margin: 0;
+      background: url('/static/images/fondo.png') no-repeat center center;
+      background-size: cover;
     }
 
-    .container {
+   .main-container {
+      background: url('/static/images/fondo.png') no-repeat center center; /* Agregué esta línea */
+      background-size: cover; 
+      border: 10px solid white; /* Increased border width */
+      border-radius: 20px;
+      padding: 40px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+      display: flex; /* Add this to center the content vertically and horizontally */
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      width: 1200px; /* Ajusta el tamaño del contenedor principal */
+      height: 600px;
+      background-image: url('/static/images/fondo-inicio.png'); /* Added background image */
+      background-size: 100% 100%; /* Cover the entire container */
+    }
+
+   .container {
       background-color: #fff;
       border-radius: 10px;
       padding: 20px;
@@ -22,20 +42,36 @@
       width: 450px; /* Ancho del cuadro blanco */
     }
 
-    .button {
+   .student-button {
       padding: 10px 40px;
-      background-color: #007bff; /* Azul claro */
+      background-color: #FF FFFF; /* Azul claro */
+      color: red;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      width:450px;
+    }
+
+   .student-button:hover {
+      background-color: white; /* Azul más oscuro */
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    }
+
+   .logout-button {
+      padding: 10px 40px;
+      background-color: red; /* Rojo */
       color: white;
       border: none;
       border-radius: 5px;
       cursor: pointer;
     }
 
-    .button:hover {
-      background-color: #0056b3; /* Azul más oscuro */
+   .logout-button:hover {
+      background-color: darkred; /* Rojo más oscuro */
     }
 
-    .accessibility-icon {
+   .accessibility-icon {
       position: absolute;
       bottom: 20px;
       left: 20px;
@@ -45,13 +81,15 @@
 </head>
 <body>
 
-  <h2 style="margin-bottom: 20px;">Selecciona tu perfil</h2>
+  <div class="main-container">
+    <h2>Selecciona tu perfil</h2>
 
-  <div class="container">
-    <button class="button">ESTUDIANTE</button>
+    <div class="container">
+      <button class="student-button">ESTUDIANTE</button>
+    </div>
+
+    <button class="logout-button">Cerrar Sesión</button>
   </div>
-
-  <button class="button">Cerrar Sesión</button>
 
   <img src="/static/images/icono_hombre.png" alt="Icono de accesibilidad" class="accessibility-icon" style="filter: invert(0) sepia(100%) saturate(100%) hue-rotate(180deg);">
 
