--- a/Ejecutable/static/css/inicio.css
+++ b/Ejecutable/static/css/inicio.css
@@ -1,4 +1,4 @@
-body {
+inicio.css body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
@@ -280,12 +280,7 @@ header {
 }
 
 .carousel-btn:hover {
-  background-color: rgba(
-    255,
-    0,
-    0,
-    0.5
-  );
+  background-color: rgba(255, 0, 0, 0.5);
 }
 
 .carousel img {
