--- a/Ejecutable/static/css/login.css
+++ b/Ejecutable/static/css/login.css
@@ -61,6 +61,7 @@ body::after {
   max-width: 376px;
   width: 100%;
   position: relative;
+  overflow: hidden;
   z-index: 1;
   min-height: 300px;
   margin-bottom: 7.5px;
@@ -70,7 +71,7 @@ body::after {
 .login-container img {
   width: 168px;
   display: block;
-  margin-left: 24px;
+  margin-left: 21px;
   margin-top: 29.2px;
 }
 
@@ -165,6 +166,7 @@ body::after {
   margin-top: 1.8px;
   text-align: left;
   text-decoration: none;
+  width: 50%;
 }
 
 .forgot-password:hover {
@@ -173,10 +175,10 @@ body::after {
 }
 
 .troubleshoot-container {
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, 0.62);
   color: white;
   padding: 10px;
-  border-top: 1px solid #000;
+  border-top: 1px solid rgba(0, 0, 0, 0.41);
   position: fixed;
   bottom: 0;
   width: 100%;
@@ -423,7 +425,7 @@ body::after {
   color: rgb(27, 27, 27);
 }
 
-.help-link {
+.help-box .help-link {
   position: absolute;
   bottom: 36px;
   left: 44px;
@@ -432,4 +434,193 @@ body::after {
   font-weight: 400;
   color: rgb(27, 27, 27);
   line-height: 20px;
+}
+
+.help-link a {
+  font-family: "Segoe UI Webfont", Arial, sans-serif;
+  font-size: 15px;
+  font-weight: 400;
+  color: rgb(27, 27, 27);
+  line-height: 20px;
+  text-decoration: none;
+  display: inline-block;
+  pointer-events: none;
+}
+
+/* PARA EL CORREO MOSTRADO, MANEJADO CON SCRIPT */
+.email-display {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 15px;
+  line-height: 24px;
+  color: rgb(27, 27, 27);
+  padding-left: 70px;
+  display: inline-block;
+  transform: translateY(-64px);
+}
+
+/* PARA EL BOTÓN CON LA FLECHA DE REGRESAR */
+.circular-button {
+  width: 25.2px;
+  height: 25.2px;
+  background-color: transparent;
+  border-radius: 50%;
+  border: none;
+  position: absolute;
+  top: -48.4px;
+  left: 43.4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  z-index: 100;
+}
+
+.circular-button:hover {
+  background-color: #e5e5e5;
+}
+
+.circular-button img {
+  width: 12.6px;
+  height: 11px;
+  margin-top: 0px;
+  margin-left: 0.5px;
+}
+
+/* PARA EL TEXTO "Escribir contraseña" */
+.password-container h2 {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 600;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 28px;
+  color: rgb(27, 27, 27);
+  margin-left: 44px;
+  margin-top: -68px;
+}
+
+/* DISEÑO DEL BOTÓN "Iniciar sesión" */
+#login-button {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: normal;
+  color: rgb(255, 255, 255);
+  background-color: #0067b8;
+  border: none;
+  padding: 7.6px 10.8px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  position: relative;
+  top: 15.6px;
+  left: 287px;
+}
+
+#login-button:hover {
+  background-color: #005da6;
+}
+
+/* DISEÑO DEL CONTENEDOR DE CORREO DENTRO DEL CONTENEDOR DE "login-container" */
+.slide-container {
+  height: 200px;
+  overflow-y: hidden;
+  transition: transform 0.3s ease-out;
+}
+
+.slide-container.desplazado {
+  transform: translateX(-110%);
+}
+
+/* DISEÑO DEL CONTENEDOR DE PASSWORD DENTRO DEL CONTENEDOR DE "login-container" */
+.password-container {
+  position: absolute;
+  top: 142px;
+  right: -100%;
+  width: 100%;
+  height: 200px;
+  transition: right 0.3s ease-out;
+}
+
+.password-container.show {
+  right: 0;
+}
+
+/* CAJA DE TEXTO "Contraseña" */
+.password-container input[type="password"] {
+  border: none;
+  border-bottom: 1px solid #666666;
+  margin-bottom: 15px;
+  margin-top: -6px;
+  padding: 7.5px 0;
+  font-size: 16px;
+  outline: none;
+  margin-left: 45.8px;
+  width: calc(81.4% - 10px);
+}
+
+.password-container input[type="password"]:hover {
+  border-color: #333333;
+}
+
+.password-container input[type="password"]:focus {
+  border-color: #333333;
+}
+
+.password-container input[type="password"]:focus:not(:hover) {
+  border-color: #0067b8;
+}
+
+::placeholder {
+  font-family: "Segoe UI Webfont", Arial, sans-serif;
+  color: #666666;
+  font-size: 15px;
+}
+
+/* Estilo para "He olvidado mi contraseña" */
+.password-container .forgot-password {
+  font-family: "Segoe UI Webfont", Arial, sans-serif;
+  font-weight: 400;
+  color: rgb(0, 103, 184);
+  font-size: 13px;
+  line-height: 20px;
+  display: inline-block;
+  margin-top: 1.2px;
+  text-decoration: none;
+  padding-left: 31.9px;
+  width: auto;
+}
+
+.password-container .forgot-password:hover {
+  color: #666666;
+  text-decoration: underline;
+}
+
+/* Estilo para "Use una aplicación en su lugar" */
+.password-container .use-app {
+  font-family: "Segoe UI Webfont", Arial, sans-serif;
+  font-weight: 400;
+  color: rgb(0, 103, 184);
+  font-size: 13px;
+  line-height: 20px;
+  display: block;
+  margin-top: 16px;
+  text-decoration: none;
+  padding-left: 46.2px;
+  width: 39.9%;
+}
+
+.password-container .use-app:hover {
+  color: #666666;
+  text-decoration: underline;
+}
+
+/* Ajuste para ocultar additional-container cuando password-container está activo */
+.password-container.show + .login-container .additional-container {
+  display: none;
+}
+
+/* Ajuste para expandir altura de login-container cuando password-container está activo */
+.password-container.show + .login-container {
+  min-height: 350px;
 }
