--- a/Ejecutable/templates/intranet_home.html
+++ b/Ejecutable/templates/intranet_home.html
@@ -1,3 +1,4 @@
+intranet_home.html
 <!DOCTYPE html>
 <html lang="es">
   <head>
@@ -123,35 +124,8 @@
         </div>
       </section>
     </div>
-
     <script>
-      const carousel = document.querySelector(".carousel");
-      const slides = carousel.querySelectorAll("img");
-      const buttons = carousel.querySelectorAll(".carousel-btn");
-      let slideIndex = 0;
-
-      buttons.forEach((button, index) => {
-        button.addEventListener("click", () => {
-          slides.forEach((slide) => slide.classList.remove("active"));
-          buttons.forEach((btn) => btn.classList.remove("active"));
-          slides[index].classList.add("active");
-          button.classList.add("active");
-          slideIndex = index;
-        });
-      });
-
-      function moveSlides() {
-        slides.forEach((slide) => slide.classList.remove("active"));
-        buttons.forEach((btn) => btn.classList.remove("active"));
-        slides[slideIndex].classList.add("active");
-        buttons[slideIndex].classList.add("active");
-        slideIndex++;
-        if (slideIndex >= slides.length) {
-          slideIndex = 0;
-        }
-      }
-
-      setInterval(moveSlides, 5000);
+      "/static/scripts/inicio.js";
     </script>
   </body>
 </html>
