--- a/Ejecutable/templates/intranet_home.html
+++ b/Ejecutable/templates/intranet_home.html
@@ -1,4 +1,3 @@
-intranet_home.html
 <!DOCTYPE html>
 <html lang="es">
   <head>
@@ -31,8 +30,18 @@ intranet_home.html
               <img src="/static/images/o365.png" alt="Office 365 Logo" />
               Inicia sesión con o365
             </a>
-            <p><a href="#" class="forgot-password">Olvidé mi contraseña</a></p>
-            <a href="#" class="user-button">Conoce tu usuario</a>
+            <p>
+              <a
+                href="https://passwordreset.microsoftonline.com/Default.aspx"
+                class="forgot-password"
+                >Olvidé mi contraseña</a
+              >
+            </p>
+            <a
+              href="https://passwordreset.microsoftonline.com/Default.aspx"
+              class="user-button"
+              >Conoce tu usuario</a
+            >
           </section>
           <section class="social-links">
             <h2 style="color: #53565a">Síguenos en:</h2>
