--- a/Ejecutable/static/css/intranet_home.css
+++ b/Ejecutable/static/css/intranet_home.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("fondo_principal.png");
+  background-image: url("/static/images/fondo_principal.png");
   background-color: rgba(247, 247, 255, 1);
   background-repeat: repeat;
   background-size: auto;
