--- a/Ejecutable/templates/intranet_home.html
+++ b/Ejecutable/templates/intranet_home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Intranet - San Juan en Línea</title>
-    <link rel="stylesheet" href="/intranet_home.css" />
+    <link rel="stylesheet" href="/static/css/intranet_home.css" />
     <!-- Bootstrap CSS -->
     <link
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -17,18 +17,30 @@
 
       <!-- Contenedor del logo y texto de inicio de sesión -->
       <div class="logo-container">
-        <img src="/logo_SJB.png" alt="Logo San Juan en Línea" />
+        <img src="/static/images/logo_SJB.png" alt="Logo San Juan en Línea" />
         <div class="login-text">Ingresa a tu cuenta</div>
       </div>
 
       <!-- Contenedor de imágenes -->
       <div class="image-container">
-        <img src="/ganadores.png" alt="Ganadores" class="image-reduced" />
-        <img src="/buen_pagador.png" alt="Buen Pagador" class="image-reduced" />
-        <img src="/promo_amigos.png" alt="Promo Amigos" class="image-reduced" />
-        <img src="/yape.png" alt="Yape" class="image-reduced" />
         <img
-          src="/centro_idiomas.jpeg"
+          src="/static/images/ganadores.png"
+          alt="Ganadores"
+          class="image-reduced"
+        />
+        <img
+          src="/static/images/buen_pagador.png"
+          alt="Buen Pagador"
+          class="image-reduced"
+        />
+        <img
+          src="/static/images/promo_amigos.png"
+          alt="Promo Amigos"
+          class="image-reduced"
+        />
+        <img src="/static/images/yape.png" alt="Yape" class="image-reduced" />
+        <img
+          src="/static/images/centro_idiomas.jpeg"
           alt="Centro de Idiomas"
           class="image-centro-idiomas"
         />
@@ -73,34 +85,54 @@
       <div class="social-icons">
         <div class="social-icon-container">
           <a href="https://www.instagram.com">
-            <img src="/ico_ig.png" class="social-icon" alt="Instagram" />
+            <img
+              src="/static/images/ico_ig.png"
+              class="social-icon"
+              alt="Instagram"
+            />
           </a>
         </div>
         <div class="social-icon-container">
           <a href="https://www.facebook.com">
-            <img src="/ico_fb.png" class="social-icon" alt="Facebook" />
+            <img
+              src="/static/images/ico_fb.png"
+              class="social-icon"
+              alt="Facebook"
+            />
           </a>
         </div>
         <div class="social-icon-container">
           <a href="https://www.linkedin.com">
-            <img src="/ico_in.png" class="social-icon" alt="LinkedIn" />
+            <img
+              src="/static/images/ico_in.png"
+              class="social-icon"
+              alt="LinkedIn"
+            />
           </a>
         </div>
         <div class="social-icon-container">
           <a href="https://www.twitter.com">
-            <img src="/ico_twitter.png" class="social-icon" alt="Twitter" />
+            <img
+              src="/static/images/ico_twitter.png"
+              class="social-icon"
+              alt="Twitter"
+            />
           </a>
         </div>
         <div class="social-icon-container">
           <a href="https://www.tiktok.com">
-            <img src="/ico_tiktok.png" class="social-icon" alt="TikTok" />
+            <img
+              src="/static/images/ico_tiktok.png"
+              class="social-icon"
+              alt="TikTok"
+            />
           </a>
         </div>
       </div>
 
       <!-- Botón Inicia sesión con o365 -->
-      <button class="o365-button">
-        <img src="/o365.png" alt="o365 icon" class="o365-icon" />
+      <button class="o365-button" onclick="location.href='{% url 'login' %}'">
+        <img src="/static/images/o365.png" alt="o365 icon" class="o365-icon" />
         <span class="o365-text">Inicia sesión con o365</span>
       </button>
 
